--- a/views/todoEdit.ejs
+++ b/views/todoEdit.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <meta charset="UTF-8">
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>::ToDo List App</title>
     <link rel="stylesheet" href="/public/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai|Candal|Chewy&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -20,37 +20,42 @@
     <main>
         <section class="frm-todo">
             <form method="POST" action="/">
-                <input type="text" name='addTask' placeholder="Enter a Task ToDo" require autofocus
-                    autocomplete="off" />
+                <input type="text" name='addTask' placeholder="Enter a Task ToDo" require autocomplete="off" />
                 <button type="submit" id="btn-add"><span class="fas fa-plus"></span></button>
             </form>
         </section>
 
         <section class="task-list">
-
             <ul class="todo-list">
                 <% todoTasks.forEach(details => { %>
-                <li class="todo-list-item" title="<%= details.date %>">
+                <% if (details._id == idTask) { %>
+                <li class="todo-list-item">
+                    <form action="/edit/<%= details._id %>" method="POST">
+                        <input type="text" value="<%= details.addTask %>" name="addTask" />
+                        <span class="icons">
+                            <button type="submit" class="tick"><span class="fas fa-check"></span></button>
+                            <a href="/" class="cancel"><span class="fas fa-times"></span></a>
+                        </span>
+                    </form>
+                </li>
+                <% } else { %>
+                <li class="todo-list-item">
                     <span class="todo-list-item-name"><%= details.addTask %></span>
-                    <div class="icons">
-                        <a href="/edit/<%= details._id %>" class="edit" title="Edit Task">
-                            <span class="fas fa-pen"></span>
+                    <span class="icons">
+                        <a href="/edit/<%= details._id %>" class="edit"> <span class="fas fa-pen"></span>
                         </a>
                         <a href="/complete/<%= details._id %>" class="tick" title="Mark Done?">
                             <span class="fas fa-check"></span>
                         </a>
-                        <a href="/remove/<%= details._id %>" class="remove" title="Remove">
-                            <span class="fas fa-trash"></span>
+                        <a href="/remove/<%= details._id %>" class="remove"> <span class="fas fa-trash"></span>
                         </a>
-                    </div>
+                    </span>
                 </li>
+                <% } %>
                 <% }) %>
             </ul>
-
         </section>
     </main>
-</body>
-
 </body>
 
 </html>
